Bug 137071 - Underline not visible in presentation mode if text is also highlighted
Summary: Underline not visible in presentation mode if text is also highlighted
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.2.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.3
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-27 15:12 UTC by Telesto
Modified: 2020-09-28 15:03 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file (12.17 KB, application/vnd.oasis.opendocument.presentation)
2020-09-27 15:12 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-09-27 15:12:29 UTC
Description:
Underline not visible in presentation mode if text is also highlighted

Steps to Reproduce:
1. Open the attached file
2. Press F5

Actual Results:
Underline missing for the highlighted area

Expected Results:
Underline on top of highlighting


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 52a49f9e480ca03e231cfda82640a928393131c9
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2020-09-27 15:12:43 UTC
Created attachment 165889 [details]
Example file
Comment 2 Telesto 2020-09-27 15:17:04 UTC
@Caolan
A while ago you fixed the missing highlighting in presentation mode (bug 93789)
The fix seems to have introduced a new bug (or uncovered one)

For some reason underline is - so I assume - hidden behind the highlighting in presentation mode
Comment 3 Commit Notification 2020-09-28 11:51:54 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/269cf9dabcddb337557d6e4bcfaeaae4fe307891

Resolves: tdf#137071 draw canvas under/over lines after background

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2020-09-28 12:10:06 UTC
fixed in master, backport to 7-0 in gerrit
Comment 5 Commit Notification 2020-09-28 15:03:49 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/4b7313b615e1383f82ada0039a2b4750bff2cf26

Resolves: tdf#137071 draw canvas under/over lines after background

It will be available in 7.0.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.