Resolves: tdf#137071 draw canvas under/over lines after background

Change-Id: I066529af010ca4e34b370e462b3e9de1173e6096